incorporate optical encoder and change encoder driver

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,5 +19,5 @@ framework = arduino
 ; ; debug_server = platformio-debugger
 
 ; ; Serial Monitor options
-; monitor_speed = 9600
+monitor_speed = 115200
 ; build_flags = -D PIO_FRAMEWORK_ARDUINO_ENABLE_HWSERIAL1
